; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/ramips/files-4.14/drivers/net/ethernet/mediatek/extr_esw_rt3050.c_esw_set_gsc.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/ramips/files-4.14/drivers/net/ethernet/mediatek/extr_esw_rt3050.c_esw_set_gsc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rt305x_esw = type { i32, i32 }

@RT305X_ESW_REG_SGC = common dso_local global i32 0, align 4
@RT305X_ESW_GSC_BC_STROM_MASK = common dso_local global i32 0, align 4
@RT305X_ESW_GSC_BC_STROM_SHIFT = common dso_local global i32 0, align 4
@RT305X_ESW_GSC_LED_FREQ_MASK = common dso_local global i32 0, align 4
@RT305X_ESW_GSC_LED_FREQ_SHIFT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rt305x_esw*)* @esw_set_gsc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @esw_set_gsc(%struct.rt305x_esw* %0) #0 {
  %2 = alloca %struct.rt305x_esw*, align 8
  store %struct.rt305x_esw* %0, %struct.rt305x_esw** %2, align 8
  %3 = load %struct.rt305x_esw*, %struct.rt305x_esw** %2, align 8
  %4 = load i32, i32* @RT305X_ESW_REG_SGC, align 4
  %5 = load i32, i32* @RT305X_ESW_GSC_BC_STROM_MASK, align 4
  %6 = load i32, i32* @RT305X_ESW_GSC_BC_STROM_SHIFT, align 4
  %7 = shl i32 %5, %6
  %8 = load %struct.rt305x_esw*, %struct.rt305x_esw** %2, align 8
  %9 = getelementptr inbounds %struct.rt305x_esw, %struct.rt305x_esw* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @RT305X_ESW_GSC_BC_STROM_SHIFT, align 4
  %12 = shl i32 %10, %11
  %13 = call i32 @esw_rmw(%struct.rt305x_esw* %3, i32 %4, i32 %7, i32 %12)
  %14 = load %struct.rt305x_esw*, %struct.rt305x_esw** %2, align 8
  %15 = load i32, i32* @RT305X_ESW_REG_SGC, align 4
  %16 = load i32, i32* @RT305X_ESW_GSC_LED_FREQ_MASK, align 4
  %17 = load i32, i32* @RT305X_ESW_GSC_LED_FREQ_SHIFT, align 4
  %18 = shl i32 %16, %17
  %19 = load %struct.rt305x_esw*, %struct.rt305x_esw** %2, align 8
  %20 = getelementptr inbounds %struct.rt305x_esw, %struct.rt305x_esw* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* @RT305X_ESW_GSC_LED_FREQ_SHIFT, align 4
  %23 = shl i32 %21, %22
  %24 = call i32 @esw_rmw(%struct.rt305x_esw* %14, i32 %15, i32 %18, i32 %23)
  ret void
}

declare dso_local i32 @esw_rmw(%struct.rt305x_esw*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
